first feature done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,13 @@
     android:layout_centerHorizontal="true"
     android:layout_marginHorizontal="32dp">
     <EditText
+        android:id="@+id/phoneNumberText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Phone number"/>
+        android:hint="Phone number"
+        android:inputType="number"/>
     <EditText
+        android:id="@+id/passText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
@@ -25,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign in"
+        android:onClick="OnSignin"
         android:textAllCaps="false"/>
 
     <TextView
